--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
       POSTGRES_DB: postgres
     ports:
       - '5432:5432'
-    # volumes:
-    #   - postgres_data:/var/lib/postgresql/data
-# volumes:
-#   postgres_data:
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
