feat: remove gleich from image name
Signed-off-by: Matt Gleich <git@mattglei.ch>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,11 +12,11 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           echo ${{ secrets.REGISTRY_PASSWORD }} | docker login docker.mattglei.ch -u admin --password-stdin
-          docker build -t docker.mattglei.ch/gleich/hueport-scraper .
-          docker push docker.mattglei.ch/gleich/hueport-scraper
+          docker build -t docker.mattglei.ch/hueport-scraper .
+          docker push docker.mattglei.ch/hueport-scraper
       - uses: caprover/deploy-from-github@v1.1.2
         with:
           server: https://dev.mattglei.ch
           app: hueport-scraper
           token: '${{ secrets.CAPROVER_APP_TOKEN }}'
-          image: docker.mattglei.ch/gleich/hueport-scraper
+          image: docker.mattglei.ch/hueport-scraper
